[package]
name = "showcase"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[dependencies]
serde_json = "1.0"
serde = { version="1.0", features = ["derive"] }
